<resources>
    <string name="app_name">Unit 9 Participation-menus</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="dorothy_vaughan">Dorothy Vaughan</string>
    <string name="katherine_g_johnson">Katherine G. Johnson</string>
    <string name="mary_jackson">Mary Jackson</string>
    <string name="my_study_group">My Study Group</string>
    <string name="title_activity_settings">"Settings "</string>
    <string name="add">add</string>
    <string name="email">Email</string>
    <string name="text_message">Text Message</string>
    <string name="delete">delete</string>
    <string name="port">Import</string>
    <string name="communicate">Communicate</string>
    <string name="gallery">Gallery</string>
    <string name="send">Send</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="slideshow">Slideshow</string>
    <string name="tools">Tools</string>
</resources>
