<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:icon="@drawable/ic_action_settings" />
    <item
        android:id="@+id/action_add"
        android:orderInCategory="100"
        android:title="@string/add"
        android:icon="@drawable/ic_action_add"
        android:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:title="@string/delete"
        android:icon="@drawable/ic_action_delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_email"
        android:orderInCategory="100"
        android:title="@string/email"
        android:icon="@drawable/ic_action_email" />
    <item
        android:id="@+id/action_sms"
        android:orderInCategory="100"
        android:title="@string/text_message"
        app:showAsAction="never"
        android:icon="@drawable/ic_action_sms" />

</menu>
